# FroboMind

./: README  README.md
Robot/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  manifest.xml~
Robot/catkin_generated/: 05.catkin-test-results.sh.develspace.context.py  env_cached.sh  generate_cached_setup.py  setup_cached.sh
Robot/devel/: .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
Robot/gtest/: Makefile
Robot/src/: make_trajectory.cpp  read_position.cpp
USB-Cam/bosch_drivers/: stack.xml
Vision/: .cproject  .project  CMakeCache.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  manifest.xml  manifest.xml~
Vision/catkin_generated/: 05.catkin-test-results.sh.develspace.context.py  env_cached.sh  generate_cached_setup.py  setup_cached.sh
Vision/devel/: .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
Vision/gtest/: Makefile
Vision/src/: Vision.cpp  Vision.cpp~  image_show.cpp  image_show.cpp~
fmActuators/: .cproject  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  manifest.xml~
fmActuators/catkin_generated/: 05.catkin-test-results.sh.develspace.context.py  env_cached.sh  generate_cached_setup.py  setup_cached.sh
fmActuators/devel/: .rosinstall  env.sh  setup.bash  setup.sh  setup.zsh
fmActuators/gtest/: Makefile
fmCSP/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake
fmCSP/catkin_generated/: env_cached.sh  generate_cached_setup.py  setup_cached.sh
fmCSP/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
fmCSP/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
fmCSP/gtest/: Makefile
fmCSP/src/CAN_bus/can_socketcan/: SocketCan.cpp  SocketCan.h  can_socketcan.cpp
fmCSP/src/NMEA/: nmea.cpp
fmCSP/src/Serial_Bluetooth/: Bluetooth.cpp  Bluetooth.h  serial_bluetooth.cpp
fmCSP/src/Serial_Port/serial_binary/: serial_binary.cpp  serial_binary_interface.cpp  serial_binary_interface.h
fmCSP/src/Serial_Port/serial_string/: serialInterface.cpp  serialInterface.h  serial_string.cpp~  serial_string2.cpp
fmControllers/: CMakeLists.txt  manifest.xml
fmControllers/cfg/: rabbit_follow_params.cfg
fmControllers/launch/: rabbit-test.launch
fmCore/: .cproject  .project  .pydevproject  cmake_install.cmake
fmCore/catkin_generated/: 05.catkin-test-results.sh.develspace.context.py  env_cached.sh  generate_cached_setup.py  setup_cached.sh
fmCore/conf/: armadillo.vcg  asubot.vcg
fmCore/devel/: .catkin  .rosinstall  env.sh  setup.bash  setup.sh  setup.zsh
fmCore/gtest/: Makefile
fmDecisionMakers/: manifest.xml
fmExecutors/: CMakeLists.txt  manifest.xml
fmExecutors/action/: drive_forward.action  navigate_in_row.action  navigate_in_row_simple.action  spray.action  timed_turn.action
fmExecutors/cfg/: rabbitPlanner.cfg
fmExecutors/conf/: waypoints.yaml
fmExecutors/msg/: follow_pathFeedback.msg  follow_pathGoal.msg  follow_pathResult.msg
fmExtractors/: CMakeLists.txt  manifest.xml
fmExtractors/cfg/: lidar_row_extractor.cfg  lidar_safety_extractor.cfg
fmHMI/: CMakeLists.txt  manifest.xml
fmHMI/src/: key_to_twist.cpp  keyboardEventListener.cpp  wiimote_to_twist.cpp
fmISP/: mainpage.dox  manifest.xml
fmImplements/: CMakeLists.txt  mainpage.dox  manifest.xml
fmKinematics/: CMakeCache.txt  CMakeLists.txt  manifest.xml
fmMsgs/: .cproject  .project  .pydevproject  cmake_install.cmake
fmMsgs/catkin_generated/: 05.catkin-test-results.sh.develspace.context.py  env_cached.sh  generate_cached_setup.py  setup_cached.sh
fmMsgs/devel/: .catkin  .rosinstall  env.sh  setup.bash  setup.sh  setup.zsh
fmMsgs/gtest/: Makefile
fmMsgs/msg/: joint_conf.msg  joint_conf.msg~  (+2 more)
fmPSP/: CMakeLists.txt
fmProcessors/: CMakeLists.txt  manifest.xml
fmSafety/: mainpage.dox  manifest.xml
fmSensors/: CMakeLists.txt  manifest.xml
fmSim/: mainpage.dox  manifest.xml
fmTools/: CMakeLists.txt  mainpage.dox  manifest.xml
fmTools/launch/: webcam.launch
fmTools/src/: analyse-motors.py  analyse_run.py  cam_row_marker.cpp  cmd_vel_topic_mux_service.cpp  cmd_vel_topic_mux_service_sim.cpp  config_5hz.txt  extract_sensors.py  imu_marker.cpp  kml_to_path.py  laser_filter.cpp  path_player.py  path_recorder.py  plot_motor.py  rabbitplannermarker.cpp  rosbag_can_node.py  sensor_msg_to_joy.py  set_pcan_bitrate.py  teleop_from_pr2.cpp  ubloxconf.cpp
fmTools/src/web/: index.html
fmTools/src/web/css/: main.css
fmTools/srv/: switch_mux.srv
(+351 files in other folders)
